--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,10 @@
-spring.output.ansi.enabled=always
 spring.profiles.active=test
+spring.datasource.url=jdbc:h2:tcp://localhost:1521/testcase
+spring.datasource.username=sa
+spring.datasource.password=
 
 # JdbcTemplate sql log
 logging.level.org.springframework.jdbc=debug
+
+# log prettier
+spring.output.ansi.enabled=always
